--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,25 @@
-
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
+    <form action='/team' method='POST'>
+    <h3>Team Name:<input name="team[name]" type="text" id="team[name]"></h3>
+    <h3>Team Motto:<input name="team[motto]" type="text" id="team[motto]"></h3>
+    <h1>Hero 1</h1>
+    <h3>Hero Name:<input name="member1_name" id="team[memberers][][name]"></h3>
+    <h3>Hero Power:<input name="member1_power" id=team[memebers][][power]></h3>
+     <h3>Hero Bio:<input name="member1_bio" id=team[memebers][][bio]></h3>
+     <h1>Hero 2</h1>
+    <h3>Hero Name:<input name="member2_name" id="team[memberers][][name]"></h3>
+    <h3>Hero Power:<input name="member2_power" id=team[memebers][][power]></h3>
+     <h3>Hero Bio:<input name="member2_bio" id=team[memebers][][bio]></h3>
+     <h1>Hero 1</h1>
+    <h3>Hero Name:<input name="member3_name" id="team[memberers][][name]"></h3>
+    <h3>Hero Power:<input name="member3_power" id=team[memebers][][power]></h3>
+     <h3>Hero Bio:<input name="member3_bio" id=team[memebers][][bio]></h3>
+    <input type="submit" value="submit" name="submit">
+    </form>
+  </body>
+</html>
