--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,22 @@
-
+<html>
+  <head></head>
+  <body>
+    <h1><% params  %></h1>
+    <h1><%  %></h1>
+    <h1><%  %></h1>
+    <h1>Team Name: <%= params["team"]["name"] %></h1>
+    <h1>Team Motto: <%= params["team"]["motto"] %></h1>
+    <h1>Hero Name: <%= params["member1_name"] %></h1>
+    <h1>Hero Power: <%= params["member1_power"] %></h1>
+     <h1>Hero Biography: <%= params["member1_bio"] %></h1>
+    <h1>Hero Name: <%= params["member2_name"] %></h1>
+     <h1>Hero Power: <%= params["member2_power"] %></h1>
+    <h1>Hero Biography: <%= params["member2_bio"] %></h1>
+    <h1>Hero Name: <%= params["member3_name"] %></h1>
+     <h1>Hero Power: <%= params["member3_power"] %></h1>
+    <h1>Hero Biography: <%= params["member3_bio"] %></h1>
+    <%  %>
+  </body>
+</html>
 
 
